<resources>
    <string name="app_name">Cashier</string>


    <string name="count_format">%d</string>
    <string name="add">Add</string>
    <string name="is_deposit">Deposit</string>
    <string name="enter_price">Price</string>
    <string name="enter_deposit">Deposit</string>

    <!-- Binding Strings -->
    <string name="deposit">Deposit:</string>
    <string name="price">Price:</string>
    <string name="euro_sign">€</string>


    <string name="selected">Selected:</string>
    <string name="total">Total:</string>
    <string name="finish">Finish</string>
    <string name="space">-</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="create_session_info">Session will start immediately by creation.</string>
    <string name="create_session_name">Please enter a name to create a new session</string>
</resources>