<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="createViewModel"
            type="de.breitmeier.android.cashier.create.CreateViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/darker_gray"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/create_list_element"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="204dp"
            android:paddingTop="2dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:elevation="4dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:text="@={createViewModel.product.name}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_deposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_input_price"
                app:layout_constraintBottom_toBottomOf="@id/text_input_price"
                app:layout_constraintEnd_toStartOf="@id/text_input_price"
                android:checked="@={createViewModel.isDeposit}"
                android:text="@string/is_deposit"
                android:layout_margin="4dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_price"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/cb_deposit"
                app:layout_constraintTop_toBottomOf="@id/text_input_name"
                app:layout_constraintEnd_toStartOf="@id/text_input_deposit"
                app:layout_constraintBottom_toTopOf="@id/btn_add"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_margin="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_price"
                    android:inputType="numberDecimal"
                    android:text="@={createViewModel.price}"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_deposit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_input_price"
                app:layout_constraintBottom_toBottomOf="@id/text_input_price"
                app:layout_constraintStart_toEndOf="@id/text_input_price"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_margin="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_deposit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_deposit"
                    android:inputType="numberDecimal"
                    android:text="@={createViewModel.deposit}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/text_input_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/add"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</layout>