<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="calculateViewModel"
            type="de.breitmeier.android.cashier.calculate.CalculateViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_selected"
            style="@style/App.Style.StartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/rv_selected"
            android:gravity="center"
            android:text="@string/selected" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:elevation="1dp"
            android:padding="12dp"
            android:src="@drawable/ic_round_arrow_back_24"
            android:onClick="@{()-> calculateViewModel.onBackClicked()}"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_selected"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_below="@id/img_back"
            android:layout_margin="2dp"
            tools:listitem="@layout/calculate_list_element"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_selected"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_below="@id/rv_selected"
            android:text="@string/total"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="false"
            android:layout_below="@id/rv_selected"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            style="@style/App.Style.StartTextView"
            tools:text="30.50€"
            app:formatTotal="@{calculateViewModel.total}"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_finish"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_total_price"
            android:layout_centerHorizontal="true"
            android:text="@string/finish"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{()-> calculateViewModel.onFinishedClicked()}"
            />

    </RelativeLayout>

</layout>